--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<h1>Chang Gao</h1>
+<p>Chang is a 2nd year PhD student at the department of economics, University of Oklhoma</p>
 </body>
 </html>
