CV and photo added

--- a/index.html
+++ b/index.html
@@ -1,7 +1,37 @@
 <!DOCTYPE html>
 <html>
+
+<head>
+    <title>Chang Gao - PhD Student</title>
+</head>
+
 <body>
-<h1>Chang Gao</h1>
-<p>Chang is a 2nd year PhD student at the department of economics, University of Oklhoma</p>
+    <header>
+        <h1>Chang Gao</h1>
+        <nav>
+            <ul>
+                <li><a href="#about">About</a></li>
+                <li><a href="#cv">CV</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <section id="about">
+        <h2>About Me</h2>
+        <p>Chang is a 2nd year PhD student at the Department of Economics, University of Oklahoma.</p>
+        <!-- Insert your photo here -->
+        <img src="IMG_5760.HEIC" alt="Chang Gao">
+    </section>
+
+    <section id="cv">
+        <h2>Curriculum Vitae</h2>
+        <!-- Link to your CV file -->
+        <p>Download Chang's <a href="https://drive.google.com/file/d/1qo8c1qEIPuigxYvP-prudGyN5NOxE29n/view?usp=sharing" download>CV</a>.</p>
+    </section>
+
+    <footer>
+        <p>&copy; 2024 Chang Gao. All rights reserved.</p>
+    </footer>
 </body>
+
 </html>
