--- a/index.html
+++ b/index.html
@@ -3,22 +3,68 @@
 
 <head>
     <title>Chang Gao - PhD Student</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+        }
+
+        header {
+            background-color: #f2f2f2;
+            padding: 20px;
+            text-align: center;
+        }
+
+        section {
+            padding: 20px;
+            margin-bottom: 20px;
+        }
+
+        footer {
+            background-color: #333;
+            color: #fff;
+            padding: 10px 20px;
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+            text-align: center;
+        }
+
+        #about {
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+        }
+
+        #about img {
+            width: 150px;
+            margin-left: 20px;
+        }
+
+        @media (max-width: 768px) {
+            #about {
+                flex-direction: column;
+            }
+
+            #about img {
+                margin-left: 0;
+                margin-top: 10px;
+            }
+        }
+    </style>
 </head>
 
 <body>
     <header>
         <h1>Chang Gao</h1>
-        <nav>
-            <ul>
-                <li><a href="#about">About</a></li>
-                <li><a href="#cv">CV</a></li>
-            </ul>
-        </nav>
     </header>
 
     <section id="about">
-        <h2>About Me</h2>
-        <p>Chang is a 2nd year PhD student at the Department of Economics, University of Oklahoma.</p>
+        <div>
+            <h2>About Me</h2>
+            <p>Chang is a 2nd year PhD student at the Department of Economics, University of Oklahoma.</p>
+        </div>
         <!-- Insert your photo here -->
         <img src="IMG_5760.HEIC" alt="Chang Gao">
     </section>
