--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <p>Chang is a 2nd year PhD student at the Department of Economics, University of Oklahoma.</p>
         </div>
         <!-- Insert your photo here -->
-        <img src="IMG_5760.HEIC" alt="Chang Gao">
+        <img src="https://via.placeholder.com/150" alt="Chang Gao">
     </section>
 
     <section id="cv">
