--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
         section {
             padding: 20px;
             margin-bottom: 20px;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
         }
 
         footer {
@@ -32,13 +35,11 @@
         }
 
         #about {
-            display: flex;
-            flex-direction: row;
-            align-items: center;
+            flex-direction: row-reverse;
         }
 
         #about img {
-            width: 150px;
+            width: 200px;
             margin-left: 20px;
         }
 
@@ -61,17 +62,15 @@
     </header>
 
     <section id="about">
+        <img src="IMG_5760.jpg" alt="Chang Gao">
         <div>
             <h2>About Me</h2>
             <p>Chang is a 2nd year PhD student at the Department of Economics, University of Oklahoma.</p>
         </div>
-        <!-- Insert your photo here -->
-        <img src="https://via.placeholder.com/150" alt="Chang Gao">
     </section>
 
     <section id="cv">
         <h2>Curriculum Vitae</h2>
-        <!-- Link to your CV file -->
         <p>Download Chang's <a href="https://drive.google.com/file/d/1qo8c1qEIPuigxYvP-prudGyN5NOxE29n/view?usp=sharing" download>CV</a>.</p>
     </section>
 
