update cv upload channel

--- a/index.html
+++ b/index.html
@@ -68,10 +68,9 @@
             <p>Chang is a 2nd year PhD student at the Department of Economics, University of Oklahoma.</p>
         </div>
     </section>
-
     <section id="cv">
-        <h2>Curriculum Vitae</h2>
-        <p>Download Chang's <a href="https://drive.google.com/file/d/1qo8c1qEIPuigxYvP-prudGyN5NOxE29n/view?usp=sharing" download>CV</a>.</p>
+    <h2>Curriculum Vitae</h2>
+    <p>Download Chang's <a href="CV_chang_gao.pdf" download>CV</a>.</p>
     </section>
 
     <footer>
