--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
         <div>
             <h2>About Me</h2>
             <p>Chang is a 2nd year PhD student at the Department of Economics, University of Oklahoma.</p>
+            <p>His interest lies in the macroeconomic issues related to housing price, aging and pension.</p>
         </div>
     </section>
     <section id="cv">
