--- a/index.html
+++ b/index.html
@@ -63,27 +63,17 @@
     <section id="about">
         <div>
             <h2>About Me</h2>
-            <p>Chang is a 2nd year PhD student at the Department of Economics, University of Oklahoma.</p>
-            <p>His interest lies in the macroeconomic issues related to housing price, aging and pension.</p>
+            <p>Chang is a 2nd year PhD student at the Department of Economics, University of Oklahoma, his interest lies in the macroeconomic issues related to housing price, aging and pension.</p>
         </div>
         <!-- Insert your photo here -->
-        <img src="https://via.placeholder.com/150" alt="Chang Gao">
+        <img src="IMG_5760.jpg" alt="Chang Gao">
     </section>
 
     <section id="cv">
-<<<<<<< HEAD
-<<<<<<< HEAD
-    <h2>Curriculum Vitae</h2>
-    <p>Download Chang's <a href="CV_chang_gao.pdf" download>CV</a>.</p>
-=======
         <h2>Curriculum Vitae</h2>
         <!-- Link to your CV file -->
         <p>Download Chang's <a href="https://drive.google.com/file/d/1qo8c1qEIPuigxYvP-prudGyN5NOxE29n/view?usp=sharing" download>CV</a>.</p>
->>>>>>> parent of 221e044 (updated)
-=======
-        <h2>Curriculum Vitae</h2>
-        <p>Download Chang's <a href="https://drive.google.com/file/d/1qo8c1qEIPuigxYvP-prudGyN5NOxE29n/view?usp=sharing" download>CV</a>.</p>
->>>>>>> parent of f116ffb (update cv upload channel)
+
     </section>
 
     <footer>
