--- a/index.html
+++ b/index.html
@@ -1,56 +1,143 @@
-<!DOCTYPE html> <html> <head> <title>Chang Gao - PhD Student</title> <style> body { font-family: Arial, sans-serif; margin: 0; padding: 0; } header { background-color: #f2f2f2; padding: 20px; text-align: center; } nav { background-color: #333; padding: 10px; text-align: center; } nav ul { list-style-type: none; margin: 0; padding: 0; } nav ul li { display: inline; margin-right: 10px; } nav ul li a { color: #fff; text-decoration: none; } section { padding: 20px; margin-bottom: 20px; } footer { background-color: #333; color: #fff; padding: 10px 20px; position: fixed; bottom: 0; width: 100%; text-align: center; } #about { display: flex; flex-direction: row; align-items: center; } #about img { width: 150px; margin-left: 20px; } #personal, #cv { display: none; } @media (max-width: 768px) { #about { flex-direction: column; } #about img { margin-left: 0; margin-top: 10px; } } </style> </head> <body> <header> <h1>Chang Gao</h1> </header>
-    <nav>
-    <ul>
-        <li><a href="javascript:void(0)" onclick="showSection('about')">About Me</a></li>
-        <li><a href="javascript:void(0)" onclick="showSection('personal')">Personal</a></li>
-        <li><a href="javascript:void(0)" onclick="showSection('cv')">Curriculum Vitae</a></li>
-    </ul>
-</nav>
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Chang Gao - PhD Student</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+    }
+    header {
+      background-color: #f2f2f2;
+      padding: 20px;
+      text-align: center;
+    }
+    nav {
+      background-color: #333;
+      padding: 10px;
+      text-align: center;
+    }
+    nav ul {
+      list-style-type: none;
+      margin: 0;
+      padding: 0;
+    }
+    nav ul li {
+      display: inline;
+      margin-right: 10px;
+    }
+    nav ul li a {
+      color: #fff;
+      text-decoration: none;
+    }
+    section {
+      padding: 20px;
+      margin-bottom: 20px;
+    }
+    footer {
+      background-color: #333;
+      color: #fff;
+      padding: 10px 20px;
+      position: fixed;
+      bottom: 0;
+      width: 100%;
+      text-align: center;
+    }
+    #about {
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+    }
+    #about img {
+      width: 150px;
+      margin-left: 20px;
+    }
+    #personal, #cv {
+      display: none;
+    }
+    @media (max-width: 768px) {
+      #about {
+        flex-direction: column;
+      }
+      #about img {
+        margin-left: 0;
+        margin-top: 10px;
+      }
+    }
+    .image-gallery {
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+      grid-gap: 10px;
+      justify-items: center;
+      align-items: center;
+    }
+    .image-gallery img {
+      max-width: 100%;
+      height: auto;
+      object-fit: cover;
+      border-radius: 5px;
+    }
+  </style>
+</head>
+<body>
+  <header>
+    <h1>Chang Gao</h1>
+  </header>
 
-<!-- About Me -->
-<section id="about">
+  <nav>
+    <ul>
+      <li><a href="javascript:void(0)" onclick="showSection('about')">About Me</a></li>
+      <li><a href="javascript:void(0)" onclick="showSection('cv')">Curriculum Vitae</a></li>
+      <li><a href="javascript:void(0)" onclick="showSection('personal')">Personal</a></li>
+    </ul>
+  </nav>
+
+  <!-- About Me -->
+  <section id="about">
     <div>
-        <h2>About Me</h2>
-        <p>Chang is a 2nd year PhD student at the Department of Economics, University of Oklahoma. My interest lies in the macroeconomic issues related to housing price, aging and pension.</p>
+      <h2>About Me</h2>
+      <p>Chang is a 2nd year PhD student at the Department of Economics, University of Oklahoma. My interest lies in the macroeconomic issues related to housing price, aging and pension.</p>
     </div>
     <!-- Insert your photo here -->
     <img src="IMG_5760.jpg" alt="Chang Gao">
-</section>
+  </section>
 
-<!-- Personal -->
-<section id="personal">
+  <!-- Curriculum Vitae -->
+  <section id="cv">
+    <h2>Curriculum Vitae</h2>
+    <!-- Link to your CV file -->
+    <p>Download Chang's <a href="https://drive.google.com/file/d/1qo8c1qEIPuigxYvP-prudGyN5NOxE29n/view?usp=sharing" target="_blank">CV</a>.</p>
+  </section>
+
+  <!-- Personal -->
+  <section id="personal">
     <h2>Personal</h2>
     <p>I enjoy travel around the world, here is my recent trip to Hokkaido, Japan.</p>
     <div class="image-gallery">
-        <img src="6372.jpg" alt="Image 1">
-        <img src="6332.jpg" alt="Image 2">
-        <img src="6377.jpg" alt="Image 3">
-        <img src="6452.jpg" alt="Image 2">
-        <img src="6801.jpg" alt="Image 3">
-        <!-- 继续添加其他图片 -->
+      <img src="6372.jpg" alt="Image 1">
+      <img src="6332.jpg" alt="Image 2">
+      <img src="6377.jpg" alt="Image 3">
+      <img src="6452.jpg" alt="Image 4">
+      <img src="6801.jpg" alt="Image 5">
     </div>
-</section>
+  </section>
 
-<!-- Curriculum Vitae -->
-<section id="cv">
-    <h2>Curriculum Vitae</h2>
-    <!-- Link to your CV file -->
-    <p>Download Chang's <a href="path/to/your/cv.pdf" download>CV</a>.</p>
-</section>
-
-<footer>
+  <footer>
     <p>&copy; 2024 Chang Gao. All rights reserved.</p>
-</footer>
+  </footer>
 
-<script>
+  <script>
     function showSection(sectionId) {
-        var sections = document.querySelectorAll('section');
-        for (var i = 0; i < sections.length; i++) {
-            sections[i].style.display = 'none';
-        }
-        document.getElementById(sectionId).style.display = 'block';
+      var sections = document.querySelectorAll('section');
+      for (var i = 0; i < sections.length; i++) {
+        sections[i].style.display = 'none';
+      }
+      document.getElementById(sectionId).style.display = 'block';
     }
+
     // 默认显示 "About Me" 部分
     showSection('about');
-</script>
-</body> </html>
+  </script>
+</body>
+</html>
