--- a/index.html
+++ b/index.html
@@ -46,12 +46,16 @@
     }
     #about {
       display: flex;
-      flex-direction: row;
+      flex-direction: column;
       align-items: center;
+      text-align: center;
     }
     #about img {
-      width: 150px;
-      margin-left: 20px;
+      width: 200px;
+      height: auto;
+      margin-top: 20px;
+      border-radius: 50%;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
     }
     #personal, #cv {
       display: none;
@@ -105,7 +109,7 @@
 
   <!-- Curriculum Vitae -->
   <section id="cv">
-    <h2>Curriculum Vitae</h2>
+    <h2>CV</h2>
     <!-- Link to your CV file -->
     <p>Download Chang's <a href="https://drive.google.com/file/d/1qo8c1qEIPuigxYvP-prudGyN5NOxE29n/view?usp=sharing" target="_blank">CV</a>.</p>
   </section>
