--- a/index.html
+++ b/index.html
@@ -91,9 +91,9 @@
 
   <nav>
     <ul>
-      <li><a href="javascript:void(0)" onclick="showSection('about')">About Me</a></li>
-      <li><a href="javascript:void(0)" onclick="showSection('cv')">Curriculum Vitae</a></li>
-      <li><a href="javascript:void(0)" onclick="showSection('personal')">Personal</a></li>
+      <li><a href="javascript:void(0)" onclick="showSection('about')">About</a></li>
+      <li><a href="javascript:void(0)" onclick="showSection('cv')">Vitae</a></li>
+      <li><a href="javascript:void(0)" onclick="showSection('personal')">Travel</a></li>
     </ul>
   </nav>
 
@@ -116,7 +116,7 @@
 
   <!-- Personal -->
   <section id="personal">
-    <h2>Personal</h2>
+    <h2>Trips</h2>
     <p>I enjoy travel around the world, here is my recent trip to Hokkaido, Japan.</p>
     <div class="image-gallery">
       <img src="6372.jpg" alt="Image 1">
