remove copyright stuff

--- a/index.html
+++ b/index.html
@@ -128,9 +128,9 @@
         </div>
     </section>
 
-    <footer>
-        <p>&copy; 2024 Chang Gao. All rights reserved.</p>
-    </footer>
+    <!-- <footer> -->
+        <!-- <p>&copy; 2024 Chang Gao. All rights reserved.</p> -->
+    <!-- </footer> -->
 
     <script>
         function showSection(sectionId) {
