--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         <ul>
             <li><a href="javascript:void(0)" onclick="showSection('about')">About</a></li>
             <li><a href="javascript:void(0)" onclick="showSection('cv')">Vitae</a></li>
-            <li><a href="javascript:void(0)" onclick="showSection('personal')">Travel</a></li>
+            <li><a href="javascript:void(0)" onclick="showSection('personal')">Personal</a></li>
         </ul>
     </nav>
 
