--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     <nav>
         <ul>
             <li><a href="javascript:void(0)" onclick="showSection('about')">About</a></li>
-            <li><a href="javascript:void(0)" onclick="showSection('cv')">Vitae</a></li>
+            <li><a href="javascript:void(0)" onclick="showSection('cv')">CV</a></li>
             <li><a href="javascript:void(0)" onclick="showSection('personal')">Personal</a></li>
         </ul>
     </nav>
