--- a/index.html
+++ b/index.html
@@ -102,7 +102,8 @@
     <section id="about">
         <div>
             <h2>About Me</h2>
-            <p>Chang is a 2nd year PhD student at the Department of Economics, University of Oklahoma. My interest lies in the macroeconomic issues related to housing price, aging and pension.</p>
+            <p>I am a 2nd year PhD student at the Department of Economics, University of Oklahoma. My interest lies in the macroeconomic issues related to housing price, aging and pension.</p>
+            <p>Contact: gaochang1226@gmail.com</p>
         </div>
         <!-- Insert your photo here -->
         <img src="IMG_5760.jpg" alt="Chang Gao">
