--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         <ul>
             <li><a href="javascript:void(0)" onclick="showSection('about')">About</a></li>
             <li><a href="javascript:void(0)" onclick="showSection('cv')">CV</a></li>
-            <li><a href="javascript:void(0)" onclick="showSection('personal')">Personal</a></li>
+            <!-- <li><a href="javascript:void(0)" onclick="showSection('personal')">Personal</a></li> -->
         </ul>
     </nav>
 
@@ -117,7 +117,7 @@
     </section>
 
     <!-- Personal -->
-    <section id="personal">
+<!--     <section id="personal">
         <h2>Trips</h2>
         <p>I enjoy travel around the world, here is my recent trip to Hokkaido, Japan.</p>
         <div class="image-gallery">
@@ -127,7 +127,7 @@
             <img src="6452.jpg" alt="Image 4">
             <img src="6801.jpg" alt="Image 5">
         </div>
-    </section>
+    </section> -->
 
     <footer>
     <p>&copy; 2024 Chang Gao. All rights reserved.</p>
