--- a/index.html
+++ b/index.html
@@ -93,11 +93,12 @@
     <nav>
         <ul>
             <li><a href="javascript:void(0)" onclick="showSection('about')">About</a></li>
+            li><a href="javascript:void(0)" onclick="showSection('cv')">Reaserch</a></li>
+            <li><a href="javascript:void(0)" onclick="showSection('cv')">Teaching</a></li>
             <li><a href="javascript:void(0)" onclick="showSection('cv')">CV</a></li>
             <!-- <li><a href="javascript:void(0)" onclick="showSection('personal')">Personal</a></li> -->
         </ul>
     </nav>
-
     <!-- About Me -->
     <section id="about">
         <div>
@@ -108,13 +109,25 @@
         <!-- Insert your photo here -->
         <img src="IMG_5760.jpg" alt="Chang Gao">
     </section>
-
+    <!-- Reasearch-->
+    <section id="cv">
+        <h2>Reasearch</h2>
+        <!-- Link to your CV file -->
+        <p>To be added...</p>
+    </section>
+    <!-- Teaching-->
+    <section id="cv">
+        <h2>Teaching</h2>
+        <!-- Link to your CV file -->
+        <p>Here is link to <a href="https://drive.google.com/drive/folders/1Pro_2r7k_mY8TGyaJ1uvB_OIkPVRpKpt?usp=sharing" target="_blank">my teaching notes in intermediate macroeconomics and MA level optimization (in both Chinese and English)</a>.</p>
+    </section>
     <!-- Curriculum Vitae -->
     <section id="cv">
         <h2>CV</h2>
         <!-- Link to your CV file -->
         <p>Download Chang's <a href="https://drive.google.com/file/d/1qo8c1qEIPuigxYvP-prudGyN5NOxE29n/view?usp=sharing" target="_blank">CV</a>.</p>
     </section>
+    
 
     <!-- Personal -->
 <!--     <section id="personal">
