--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
     <nav>
         <ul>
             <li><a href="javascript:void(0)" onclick="showSection('about')">About</a></li>
-            li><a href="javascript:void(0)" onclick="showSection('cv')">Reaserch</a></li>
-            <li><a href="javascript:void(0)" onclick="showSection('cv')">Teaching</a></li>
+            li><a href="javascript:void(0)" onclick="showSection('Reaserch')">Reaserch</a></li>
+            <li><a href="javascript:void(0)" onclick="showSection('Teaching')">Teaching</a></li>
             <li><a href="javascript:void(0)" onclick="showSection('cv')">CV</a></li>
             <!-- <li><a href="javascript:void(0)" onclick="showSection('personal')">Personal</a></li> -->
         </ul>
@@ -110,15 +110,15 @@
         <img src="IMG_5760.jpg" alt="Chang Gao">
     </section>
     <!-- Reasearch-->
-    <section id="cv">
+    <section id="Reasearch">
         <h2>Reasearch</h2>
         <!-- Link to your CV file -->
         <p>To be added...</p>
     </section>
     <!-- Teaching-->
-    <section id="cv">
+    <section id="Teaching">
         <h2>Teaching</h2>
-        <!-- Link to your CV file -->
+        <!-- Link to slides-->
         <p>Here is link to <a href="https://drive.google.com/drive/folders/1Pro_2r7k_mY8TGyaJ1uvB_OIkPVRpKpt?usp=sharing" target="_blank">my teaching notes in intermediate macroeconomics and MA level optimization (in both Chinese and English)</a>.</p>
     </section>
     <!-- Curriculum Vitae -->
