--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     <nav>
         <ul>
             <li><a href="javascript:void(0)" onclick="showSection('about')">About</a></li>
-            li><a href="javascript:void(0)" onclick="showSection('Reaserch')">Reaserch</a></li>
+            li><a href="javascript:void(0)" onclick="showSection('Research')">Research</a></li>
             <li><a href="javascript:void(0)" onclick="showSection('Teaching')">Teaching</a></li>
             <li><a href="javascript:void(0)" onclick="showSection('cv')">CV</a></li>
             <!-- <li><a href="javascript:void(0)" onclick="showSection('personal')">Personal</a></li> -->
@@ -110,14 +110,14 @@
         <img src="IMG_5760.jpg" alt="Chang Gao">
     </section>
     <!-- Reasearch-->
-    <section id="Reasearch">
-        <h2>Reasearch</h2>
+    <section id="Research">
+        <h2>Research</h2>
         <!-- Link to your CV file -->
         <p>To be added...</p>
     </section>
     <!-- Teaching-->
     <section id="Teaching">
-        <h2>Teaching</h2>
+        <h2>Teach</h2>
         <!-- Link to slides-->
         <p>Here is link to <a href="https://drive.google.com/drive/folders/1Pro_2r7k_mY8TGyaJ1uvB_OIkPVRpKpt?usp=sharing" target="_blank">my teaching notes in intermediate macroeconomics and MA level optimization (in both Chinese and English)</a>.</p>
     </section>
