--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
     <section id="Research">
         <h2>Research</h2>
         <!-- Link to your CV file -->
-        <p>To be added...</p>
+        <p>To be added</p>
     </section>
     <!-- Teaching-->
     <section id="Teaching">
