--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
     <section id="Teaching">
         <h2>Teach</h2>
         <!-- Link to slides-->
-        <p>Here is link to <a href="https://drive.google.com/drive/folders/1Pro_2r7k_mY8TGyaJ1uvB_OIkPVRpKpt?usp=sharing" target="_blank">my teaching notes in intermediate macroeconomics and MA level optimization (in both Chinese and English)</a>.</p>
+        <p>Here is <a href="https://drive.google.com/drive/folders/1Pro_2r7k_mY8TGyaJ1uvB_OIkPVRpKpt?usp=sharing" target="_blank">link </a>to Chang's teaching notes in intermediate macroeconomics and MA level optimization (in both Chinese and English).</p>
     </section>
     <!-- Curriculum Vitae -->
     <section id="cv">
