--- a/index.html
+++ b/index.html
@@ -142,9 +142,9 @@
         </div>
     </section> -->
 
-    <footer>
+    <!-- <footer>
     <p>&copy; 2024 Chang Gao. All rights reserved.</p>
-    </footer> 
+    </footer>  -->
 
     <script>
         function showSection(sectionId) {
