--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Chang Gao - PhD Student</title>
+    <link rel="shortcut icon" href="1.ico" />
     <style>
         body {
             font-family: Arial, sans-serif;
