--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@
         <h2>Teach</h2>
         <!-- Link to slides-->
         <p>Here is <a href="https://drive.google.com/drive/folders/1StBiLIYf8ekYUQprY9wDeQoeiJe_1JbT?usp=sharing" target="_blank">link</a> to Chang's teaching notes in intermediate macroeconomics and MA level optimization (in both Chinese and English).</p>
+        <p>Starting fall 2024, I will be teaching a session of statistics for economics undergrads.</p>
     </section>
     <!-- Curriculum Vitae -->
     <section id="cv">
