--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
     <section id="about">
         <div>
             <h2>About Me</h2>
-            <p>I am a 2nd year PhD student at the Department of Economics, University of Oklahoma. My interest lies in the macroeconomic issues related to housing price, aging and pension.</p>
+            <p>I am a 3rd year PhD student at the Department of Economics, University of Oklahoma. My interest lies in the macroeconomic issues related to housing price and aging.</p>
             <p>Contact: gaochang1226@gmail.com</p>
         </div>
         <!-- Insert your photo here -->
@@ -121,7 +121,7 @@
         <h2>Teach</h2>
         <!-- Link to slides-->
         <p>Here is <a href="https://drive.google.com/drive/folders/1StBiLIYf8ekYUQprY9wDeQoeiJe_1JbT?usp=sharing" target="_blank">link</a> to Chang's teaching notes in intermediate macroeconomics and MA level optimization (in both Chinese and English).</p>
-        <p>Starting fall 2024, I will teach a session of ECON2843: elements of statistics at The University of Oklahoma.</p>
+        <p>Starting 2024 fall, I will teach a session of ECON2843: Elements of statistics at The University of Oklahoma. In the upcoming winter, I will teach a session of ECON1113: Principle of economics-macro online.</p>
     </section>
     <!-- Curriculum Vitae -->
     <section id="cv">
