--- a/index.html
+++ b/index.html
@@ -452,16 +452,16 @@
                                     <path d="M20 4H4c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"/>
                                 </svg>
                             </a>
-                            <a href="#" title="LinkedIn">
+                            <a href="https://www.linkedin.com/in/chang-gao-841b601a5" title="LinkedIn">
                                 <svg viewBox="0 0 24 24">
                                     <path d="M19 3a2 2 0 012 2v14a2 2 0 01-2 2H5a2 2 0 01-2-2V5a2 2 0 012-2h14m-.5 15.5v-5.3a3.26 3.26 0 00-3.26-3.26c-.85 0-1.84.52-2.32 1.3v-1.11h-2.79v8.37h2.79v-4.93c0-.77.62-1.4 1.39-1.4a1.4 1.4 0 011.4 1.4v4.93h2.79M6.88 8.56a1.68 1.68 0 001.68-1.68c0-.93-.75-1.69-1.68-1.69a1.69 1.69 0 00-1.69 1.69c0 .93.76 1.68 1.69 1.68m1.39 9.94v-8.37H5.5v8.37h2.77z"/>
                                 </svg>
                             </a>
-                            <a href="#" title="Google Scholar">
+                            <!-- <a href="#" title="Google Scholar">
                                 <svg viewBox="0 0 24 24">
                                     <path d="M12 2L2 7v10c0 5.55 3.84 10.74 9 12 5.16-1.26 9-6.45 9-12V7l-10-5z"/>
                                 </svg>
-                            </a>
+                            </a> -->
                         </div>
                     </div>
                 </div>
