--- a/index.html
+++ b/index.html
@@ -493,7 +493,7 @@
                     </div>
                     
                     <div class="research-item">
-                        <h3>Future Directions</h3>
+                        <h3>Work in Progress</h3>
                         <p>
                             Planning to explore aaa.
                         </p>
@@ -545,7 +545,7 @@
                     <p>
                         See my CV with the following link.
                     </p>
-                    <a href="https://drive.google.com/file/d/1qo8c1qEIPuigxYvP-prudGyN5NOxE29n/view?usp=sharing" 
+                    <a href="https://changao1.github.io/CV_chang_gao.pdf" 
                        target="_blank" 
                        class="cv-button">
                         Download CV (PDF)
