--- a/index.html
+++ b/index.html
@@ -445,7 +445,7 @@
                     </div>
                     
                     <div class="profile-section">
-                        <img src="IMG_5760.jpg" alt="Chang Gao" class="profile-img">
+                        <img src="profile.jpg" alt="Chang Gao" class="profile-img">
                         <div class="social-links">
                             <a href="mailto:gaochang1226@gmail.com" title="Email">
                                 <svg viewBox="0 0 24 24">
@@ -476,7 +476,7 @@
                 
                 <div class="research-list">
                     <div class="research-item">
-                        <h3>Current Projects</h3>
+                        <h3>Current Research</h3>
                         <p>
                             I am currently working on research xxx.
                         </p>
@@ -541,15 +541,16 @@
             <!-- CV Section -->
             <section id="cv">
                 <div class="cv-container">
-                    <h2>Curriculum Vitae</h2>
-                    <p>
+                    <h2>Click here for Curriculum Vitae</h2>
+                     <a href="https://changao1.github.io/CV_chang_gao.pdf" title="CV"></a>
+                    <!-- <p>
                         See my CV with the following link.
                     </p>
-                    <a href="https://changao1.github.io/CV_chang_gao.pdf" 
+                    <a  
                        target="_blank" 
                        class="cv-button">
                         Download CV (PDF)
-                    </a>
+                    </a> -->
                 </div>
             </section>
         </div>
