--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
                         <li><a href="#about" class="nav-link active" onclick="showSection('about')">ABOUT</a></li>
                         <li><a href="#research" class="nav-link" onclick="showSection('research')">RESEARCH</a></li>
                         <li><a href="#teaching" class="nav-link" onclick="showSection('teaching')">TEACHING</a></li>
-                        <li><a href="#cv" class="nav-link" onclick="showSection('cv')">CV</a></li>
+                        <li><a href="#resume" class="nav-link" onclick="showSection('resume')">RESUME</a></li>
                     </ul>
                 </nav>
             </div>
@@ -539,10 +539,11 @@
             </section>
 
             <!-- CV Section -->
-            <section id="cv">
+            <section id="resume">
                 <div class="cv-container">
-                    <h2>Click here for Curriculum Vitae</h2>
-                     <a href="https://changao1.github.io/CV_chang_gao.pdf" title="CV"></a>
+<a href="https://changao1.github.io/CV_chang_gao.pdf" style="color: #666666; text-decoration: underline; text-decoration-thickness: 1px;">
+  <h2>Click here for Resumé</h2>
+</a>
                     <!-- <p>
                         See my CV with the following link.
                     </p>
