--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@
             <section id="about" class="active">
                 <div class="about-grid">
                     <div>
-                        <h1>Chang Gao</h1>
+                        <h1 style="font-family: 'Garamond', serif;">Chang Gao</h1>
                         <p class="subtitle">PhD Student in Economics</p>
                         <p class="intro-text">
                             I am a 4-year PhD student at the Department of Economics, University of Oklahoma. 
