--- a/index.html
+++ b/index.html
@@ -505,7 +505,7 @@
             <section id="teaching">
                 <h2>Teaching</h2>
                 <p class="section-subtitle">
-                    I teach ECON1113-Principles of Macroeconomics and ECON2843 - Elements of Statistics at OU.
+                    I teach ECON1113 - Principles of Macroeconomics and ECON2843 - Elements of Statistics at OU.
                 </p>
                 
                 <div class="teaching-grid">
@@ -519,7 +519,7 @@
                     </div>
                     
                     <div class="course-card">
-                        <h3>ECON1113: Principles of Economics - Macro</h3>
+                        <h3>ECON1113: Principles of Macroeconomics</h3>
                         <p>Introduction to macroeconomic principles, covering GDP, inflation, unemployment, and economic policy.</p>
                         <div class="course-meta">
                             <span>Winter 2024</span>
