update documents organization

--- a/index.html
+++ b/index.html
@@ -548,7 +548,7 @@
             <!-- CV Section -->
             <section id="resume">
                 <div class="cv-container">
-<a href="https://changao1.github.io/Resume_chang_gao.pdf" style="color: #666666; text-decoration: underline; text-decoration-thickness: 1px;">
+<a href="https://changao1.github.io/assets/resume_chang_gao.pdf" style="color: #666666; text-decoration: underline; text-decoration-thickness: 1px;">
   <h2>Click here for Resumé</h2>
 </a>
                     <!-- <p>
