--- a/index.html
+++ b/index.html
@@ -534,15 +534,22 @@
                         </div>
                     </div>
                 </div>
-                
-                <!-- <a href="https://drive.google.com/drive/folders/1StBiLIYf8ekYUQprY9wDeQoeiJe_1JbT?usp=sharing" 
-                   target="_blank" 
-                   class="teaching-notes-link">
-                    View Teaching Notes →
-                </a>
-                <p style="margin-top: 15px; font-size: 14px; color: var(--dark-gray);">
-                    Teaching notes for intermediate macroeconomics and MA level optimization (available in Chinese and English)
-                </p> -->
+                <h2>Some Notes</h2>
+                <p class="section-subtitle">
+                    Here are serval notes I worte in previous study, which might be helpful for classes related to them:
+                    <a href="https://changao1.github.io/assets/cournot_oligopoly.pdf" style="color: #666666; text-decoration: underline; text-decoration-thickness: 1px;">
+                        <h2>Cournot Oligopoly Notes</h2>
+                    </a>
+
+                    <a href="https://changao1.github.io/assets/little_notes_on_DP.pdf" style="color: #666666; text-decoration: underline; text-decoration-thickness: 1px;">
+                        <h2>Little Notes on Dynamic Programming</h2>
+                    </a>
+
+                    <a href="https://changao1.github.io/assets/n-1.pdf" style="color: #666666; text-decoration: underline; text-decoration-thickness: 1px;">
+                        <h2>Why $n-1$ on the denominator of sampple variance? For my ECON2843 class.</h2>
+                    </a>
+
+                </p>
             </section>
 
             <!-- CV Section -->
